--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^23.1.3",
     "awesome-typescript-loader": "^5.2.0",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.2.0",
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.6",
