--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.9.2",
     "tslint-react": "^3.6.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2",
