--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   "dependencies": {
     "@types/react": "^16.4.4",
     "@types/react-dom": "^16.0.6",
+    "body-parser": "latest",
+    "compression": "latest",
+    "express": "^4.16.3",
+    "express-session": "latest",
+    "helmet": "^3.12.1",
+    "morgan": "^1.9.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
@@ -29,7 +35,6 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.1.3",
-    "awesome-typescript-loader": "^5.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.2.0",
@@ -39,8 +44,9 @@
     "tslint-config-airbnb": "^5.9.2",
     "tslint-react": "^3.6.0",
     "typedoc": "^0.11.1",
+    "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
-    "webpack": "^4.12.2",
+    "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
   }
 }
