--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "module": "commonjs",
+    "noEmitOnError": true,
+    "removeComments": false,
+    "sourceMap": true,
     "target": "es5",
     "jsx": "react"
   },
+  "exclude": [
+    "node_modules"
+  ],
   "include": [
-    "./src/**/*"
+    "src/**/*"
   ]
 }
