--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "dependencies": {
     "body-parser": "latest",
     "compression": "latest",
+    "connect-mongo": "^2.0.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "latest",
+    "express-validator": "^5.2.0",
     "helmet": "^3.12.1",
+    "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
