--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pretest": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'",
-    "test": "jest",
+    "test": "jest --coverage --verbose",
     "build": "webpack",
     "docs": "typedoc --out ./doc/ --theme minimal src/index.tsx",
     "start": "node server.js"
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/SeijiEmery/CourseGraph.git"
   },
-  "author": "",
+  "author": "Course Graph",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SeijiEmery/CourseGraph/issues"
@@ -25,6 +25,8 @@
     "compression": "latest",
     "connect-mongo": "^2.0.1",
     "dotenv": "^6.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "express-session": "latest",
     "express-validator": "^5.2.0",
@@ -38,8 +40,6 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.1.3",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.2.0",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
