--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/SeijiEmery/CourseGraph#readme",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "latest",
     "compression": "latest",
     "connect-mongo": "^2.0.1",
@@ -33,6 +34,8 @@
     "helmet": "^3.12.1",
     "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
