--- a/package.json
+++ b/package.json
@@ -1,54 +1,38 @@
 {
-  "name": "coursegraph",
+  "name": "ts-next-starter",
   "version": "1.0.0",
-  "description": "The course search software offered by UCSC (and most colleges) kind of sucks, and there is no easy way to explore classes and majors without a counselor – and the counselors could probably use some help too!",
-  "main": "index.js",
   "scripts": {
-    "pretest": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'",
+    "pretest": "tslint  -p tsconfig.json -c tslint.json 'src/**/*'",
     "test": "jest",
-    "build": "webpack",
-    "docs": "typedoc --out ./doc/ --theme minimal src/index.tsx",
-    "start": "node server.js"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SeijiEmery/CourseGraph.git"
-  },
+  "description": "",
   "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SeijiEmery/CourseGraph/issues"
-  },
-  "homepage": "https://github.com/SeijiEmery/CourseGraph#readme",
   "dependencies": {
-    "body-parser": "latest",
-    "compression": "latest",
-    "connect-mongo": "^2.0.1",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-session": "latest",
-    "express-validator": "^5.2.0",
-    "helmet": "^3.12.1",
-    "mongoose": "^5.1.7",
-    "morgan": "^1.9.0",
+    "next": "^6.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.11",
-    "@types/enzyme-adapter-react-16": "^1.0.2",
-    "@types/jest": "^23.1.3",
+    "@types/jest": "^23.1.4",
+    "@types/next": "^6.0.4",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@zeit/next-typescript": "^1.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^23.2.0",
-    "ts-jest": "^22.4.6",
+    "jest": "^23.3.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.4.1",
     "tslint": "^5.10.0",
-    "tslint-config-airbnb": "^5.9.2",
+    "tslint-microsoft-contrib": "^5.0.3",
     "tslint-react": "^3.6.0",
-    "typedoc": "^0.11.1",
-    "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8"
+    "typescript": "^2.9.2"
   }
 }
