--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "pretest": "tslint  -p tsconfig.json -c tslint.json 'src/**/*'",
     "test": "jest",
-    "dev": "node server/index.js",
+    "dev": "nodemon -w server -w package.json server/index.ts",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js"
+    "start": "NODE_ENV=production node .next/production-server/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,12 @@
   "description": "",
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^7.1.4",
+    "body-parser": "latest",
     "express": "^4.16.3",
     "next": "^6.1.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "body-parser": "latest"
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.11",
@@ -34,8 +35,10 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.3.0",
+    "nodemon": "^1.17.5",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.4.1",
+    "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-microsoft-contrib": "^5.0.3",
     "tslint-react": "^3.6.0",
