--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ts-next-starter",
   "version": "1.0.0",
   "scripts": {
-    "pretest": "tslint  -p tsconfig.json -c tslint.json 'src/**/*'",
+    "pretest": "eslint **/*",
     "test": "jest",
-    "dev": "nodemon -w server -w package.json server/index.ts",
+    "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node .next/production-server/index.js"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,32 +16,23 @@
   "description": "",
   "license": "MIT",
   "dependencies": {
-    "babel-loader": "^7.1.4",
     "body-parser": "latest",
     "express": "^4.16.3",
-    "next": "^6.1.1",
+    "next": "latest",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.11",
-    "@types/jest": "^23.1.4",
-    "@types/next": "^6.0.4",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "@zeit/next-typescript": "^1.1.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.0.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-jest-enzyme": "^6.0.2",
+    "eslint-plugin-react": "^7.10.0",
     "jest": "^23.3.0",
-    "nodemon": "^1.17.5",
     "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.4.1",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.10.0",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2"
+    "react-test-renderer": "^16.4.1"
   }
 }
