--- a/.eslintignore
+++ b/.eslintignore
@@ -1,11 +1,11 @@
-node_modules
-.next
-.idea
-assets
-coverage
-crawlers
-spider
-data
+node_modules/
+.next/
+.idea/
+coverage/
+static/
+spider/
+data/
+assets/
+crawlers/
 *.json
 *.md
-yarn.lock
