--- a/.babelrc
+++ b/.babelrc
@@ -1,26 +1,13 @@
 {
   "env": {
     "development": {
-      "presets": [
-        "next/babel"
-      ]
+      "presets": ["next/babel"]
     },
     "production": {
-      "presets": [
-        "next/babel"
-      ]
+      "presets": ["next/babel"]
     },
     "test": {
-      "presets": [
-        [
-          "next/babel",
-          {
-            "preset-env": {
-              "modules": "commonjs"
-            }
-          }
-        ]
-      ]
+      "presets": [["next/babel", {"preset-env": {"modules": "commonjs"}}]]
     }
   }
 }
