--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,6 @@
     "test": {
       "presets": [["next/babel", {"preset-env": {"modules": "commonjs"}}]]
     }
-  }
+  },
+  "plugins": ["transform-class-properties"]
 }
