--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "body-parser": "latest",
     "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.0.0",
     "mongoose": "^5.2.1",
     "next": "latest",
     "next-redux-wrapper": "latest",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "5.0.7",
@@ -23,9 +25,11 @@
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.1",
+    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.3.0",
     "react-addons-test-utils": "^15.6.2",
