--- a/.eslintrc
+++ b/.eslintrc
@@ -13,17 +13,13 @@
     "ecmaVersion": 8,
     "sourceType": "module"
   },
+  "parser": "babel-eslint",
   "rules": {
     "no-console": "off",
     "strict": [
       "error",
       "global"
     ],
-    "curly": "warn",
-    "react/prop-types": "warn",
-    "babel/semi": 1
-  },
-  "plugins": [
-    "babel"
-  ]
+    "curly": "warn"
+  }
 }
