--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.1",
-    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.3.0",
     "react-addons-test-utils": "^15.6.2",
