Adding jsdoc & coverall

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "create-next-example-app",
+  "name": "course-graph",
   "scripts": {
     "dev": "node server/index.js",
     "pretest": "eslint --ext js --ext jsx **",
     "test": "jest",
+    "test:ci": "npm run pretest && jest --coverage --coverageReporters=text-lcov | coveralls",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js"
+    "start": "NODE_ENV=production node server/index.js",
+    "doc": "jsdoc -c conf.json -d docs -R README.md components"
   },
   "dependencies": {
     "body-parser": "latest",
@@ -23,14 +25,17 @@
     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
+    "@pixi/jsdoc-template": "^2.4.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
+    "coveralls": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.3.0",
+    "jsdoc": "^3.5.5",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.4.1"
   }
