--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.1",
+    "eslint-config-fbjs": "^2.0.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-relay": "0.0.24",
     "jest": "^23.3.0",
     "jsdoc": "^3.5.5",
     "react-addons-test-utils": "^15.6.2",
