--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "5.0.7",
+    "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "2.2.0"
