--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs": "jsdoc -c conf.json -d docs -R README.md components"
   },
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
     "body-parser": "latest",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
