--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ node_js:
 install:
   - npm install
 script:
-  - npm test
+  - npm test:ci
 env:
 NODE_ENV=test
+branches:
+  only:
+  - master
+  - development
