--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "latest",
+    "compression": "^1.7.2",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
     "mongoose": "^5.2.1",
