--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.2.1",
     "next": "latest",
     "next-redux-wrapper": "latest",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
