--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "docs": "jsdoc -c conf.json -d docs -R README.md components"
   },
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@material-ui/core": "^1.4.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
     "compression": "^1.7.2",
     "express": "^4.16.3",
@@ -19,6 +20,8 @@
     "next": "latest",
     "next-redux-wrapper": "latest",
     "nprogress": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
