--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-ui/core": "^1.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
+    "co": "latest",
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
+    "lru-cache": "^4.1.3",
     "mongoose": "^5.2.1",
     "next": "latest",
     "next-redux-wrapper": "latest",
@@ -29,8 +31,7 @@
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "2.2.0",
-    "co": "latest"
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "@pixi/jsdoc-template": "^2.4.2",
