--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
+    "jss": "^9.8.7",
     "lru-cache": "^4.1.3",
     "mongoose": "^5.2.1",
     "next": "latest",
@@ -27,6 +28,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
     "react-redux": "5.0.7",
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
