--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "styled-jsx": "^2.2.7"
   },
   "devDependencies": {
     "@pixi/jsdoc-template": "^2.4.2",
