--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-instantsearch": "beta",
+    "react-instantsearch-theme-algolia": "beta",
     "react-jss": "^8.6.1",
     "react-redux": "5.0.7",
     "reactjs-popup": "^1.1.1",
