--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qs": "^6.5.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-graph-vis": "^1.0.2",
     "react-instantsearch": "beta",
     "react-jss": "^8.6.1",
     "react-redux": "5.0.7",
