--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.4.0",
+    "algoliasearch": "^3.29.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
     "co": "latest",
@@ -30,7 +31,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-graph-vis": "^1.0.2",
-    "react-instantsearch": "beta",
+    "react-instantsearch": "^5.2.2",
     "react-jss": "^8.6.1",
     "react-redux": "5.0.7",
     "reactjs-popup": "^1.1.1",
