--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.0.5",
     "react-redux": "5.0.7",
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
