--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "body-parser": "latest",
     "co": "latest",
     "compression": "^1.7.2",
-    "d3": "^5.5.0",
-    "d3-drag": "^1.2.1",
-    "d3-force": "^1.1.0",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
     "jss": "^9.8.7",
@@ -32,8 +29,8 @@
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.4.1",
-    "react-d3-graph": "^1.3.0",
     "react-dom": "^16.4.1",
+    "react-draggable": "^3.0.5",
     "react-graph-vis": "^1.0.2",
     "react-instantsearch": "^5.2.2",
     "react-jss": "^8.6.1",
