--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.4.0",
+    "@material-ui/icons": "^2.0.0",
     "algoliasearch": "^3.29.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "latest",
